# Lloyd-Bank-Loan-Fraud-detection-

./: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  dockerfile  dockerfile.streamlit  pyproject.toml
data/processed/: LGB_loan_processed.xlsx  Lloyd_loan_processed.xlsx
data/raw/: LBG Step Up Data Dictionary.xlsx  LBG Step Up Data Set.xlsx
src/data/: load_data.py  preprocess.py
src/features/: build_features.py
src/models/: evaluate.py  train.py  tune.py
src/serving/: inference.py
src/serving/model/49b0b2861e544aa98a64014b37c12022/artifacts/: feature_columns.txt
src/serving/model/49b0b2861e544aa98a64014b37c12022/artifacts/model/metadata/: MLmodel  conda.yaml  python_env.yaml
src/serving/model/49b0b2861e544aa98a64014b37c12022/metrics/: data_quality_pass  f1  precision  pred_time  recall  roc_auc  train_time
src/ui/: streamlit_app.py
src/utils/: validate_data.py
tests/: prepare_processed_data.py  run_pipeline.py  test_fastapi.py  test_pipeline_phase1_data_features.py  test_pipeline_phase2_modeling.py
